@@ -3,7 +3,7 @@
 """
 usb_strings.py - a tool to dump USB string
 
-Copyright (C) 2012, 2015 Free Software Initiative of Japan
+Copyright (C) 2012, 2015, 2017 Free Software Initiative of Japan
 Author: NIIBE Yutaka <gniibe@fsij.org>
 
 This file is a part of Gnuk, a GnuPG USB Token implementation.
@@ -22,28 +22,14 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 """
 
+from gnuk_token import *
 import usb, sys
-
-USB_VENDOR_FSIJ=0x234b
-USB_PRODUCT_GNUK=0x0000
-
-def gnuk_devices_by_vidpid():
-    busses = usb.busses()
-    for bus in busses:
-        devices = bus.devices
-        for dev in devices:
-            if dev.idVendor != USB_VENDOR_FSIJ:
-                continue
-            if dev.idProduct != USB_PRODUCT_GNUK:
-                continue
-            yield dev
 
 field = ['', 'Vendor', 'Product', 'Serial', 'Revision', 'Config', 'Sys', 'Board']
 
 def main(n):
     for dev in gnuk_devices_by_vidpid():
         handle = dev.open()
-        print("Device: %s" % dev.filename)
         try:
             for i in range(1,n):
                 s = handle.getString(i, 512)
